emart-k8/api_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emart-api
spec:
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: sriuday19/node-api
        ports:
        - containerPort: 5000
