emart-k8/emart_db_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emart-db
spec:
  selector:
    matchLabels:
      app: emartdb
  template:
    metadata:
      labels:
        app: emartdb
    spec:
      containers:
      - name: emartdb
        image: mysql:8.0.33
        ports:
        - containerPort: 3306
