emart-k8/emongo_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emart-mongo
spec:
  selector:
    matchLabels:
      app: emongo
  template:
    metadata:
      labels:
        app: emongo
    spec:
      containers:
      - name: emongo
        image: mongo:4
      ports:
        - containerPort: 27017
