emart-k8/nginx_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emart-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
      ports:
        - containerPort: 80
      volmeMount:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
    volumes:
     - name: nginx-conf
       hostPath:
         path: ./nginx/default.conf
         type: Directory
