emart-k8/webapi_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emart-webapi
spec:
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: sriuday19/webapi
        ports:
        - containerPort: 9000
