emart-k8/api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: node-api
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
