emart-k8/client_service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - port: 4200
    targetPort: 4200
    protocol: TCP
  type: ClusterIP
