emart-k8/emart_db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: emartdb
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  type: ClusterIP
