emart-k8/emongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: emongo-service
spec:
  selector:
    app: emongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  type: ClusterIP
