emart-k8/webapi_service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
spec:
  selector:
    app: webapi
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
