emart-k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emart-ingress
  labels:
    name: emart-ingress
spec:
  rules:
  - host: vprofile.sriku.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-service
            port: 
              number: 4200
